# ROGUE

./: .dockerignore  .env.example  .envrc  .gitignore  .vercelignore  BRIGHT_DATA_CASE_STUDY.md  CHANGELOG.md  ONEPAGER.md  PAPERS.md  QUICKSTART.md  README.md  README_SDK.md  RESPONSIBLE_RELEASE.md  SECURITY.md  action.yml  alembic.ini  docker-compose.full.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json  railway.json  render.yaml  run_featherless_demo.sh
.github/workflows/: ci.yml  harvest-keyless.yml  keep-warm.yml  publish-corpus.yml  reproduce-refresh.yml  rogue-scan.example.yml
assets/brand/: README.md
benchmark/: __init__.py  datasets.py
benchmark/frozen/: advbench.jsonl  advbench.meta.json  advbench_100.jsonl  advbench_100.meta.json  jbb_100.meta.json  jbb_harmful.jsonl  jbb_harmful.meta.json  jbb_judge_comparison.jsonl  jbb_judge_comparison.meta.json
benchmark/memory_leakage/: README.md  extraction_pack_v1.json
corpus/: INDEX.md  README.md  SCHEMA.md  attacks.json  attacks.jsonl
data/: discovery_bandit.json
data/agent_exec/: board_memexfil_xmodel.json  board_safeguard_xmodel.json  oss_board_2026-07-12.md  session_2026-07-11_arms_3_8a_19_21.md
data/calibration/: agentdojo_unauth_corpus.jsonl  agentdojo_unauth_divergences.json  agentdojo_unauth_judge_items.jsonl  fabricated_sensitive_value_judge_items.jsonl  fabricated_sensitive_value_report.json  information_disclosure_judge_items.jsonl  information_disclosure_report.json  jbb_judge_report_v3.json  jbb_judge_report_v3_gpt-5-4.json  kappa_audit_table.md  leakage_judge_subset_2026-06-16.html  leakage_judge_subset_2026-06-16.json  leakage_judge_subset_2026-06-16.manifest.json  leakage_label_cases.json  leakage_live_cases_2026-06-16.json  net_effect_label_cases.json  net_effect_report.json  net_effect_synthetic_cases.json  sample_50.full.json  sample_50_v3.full.json  strongreject_report.json  unauthorized_action_agentdojo_report.json  unauthorized_action_judge_items.jsonl  unauthorized_action_report.json  (+2 more)
docker/: backend.Dockerfile  frontend.Dockerfile  init-test-db.sh  worker.Dockerfile
docs/: BRIGHT_DATA_CASE_STUDY.md  HF_DATASET_README.md  ONEPAGER.md  PROJECT_STRUCTURE.md  SDK.md  adaptive_orchestration_systems.md  adding-sources.md  architecture.md  bandit_for_humans.md  benchmark.md  bright-data.md  budget.md  ci-action.md  company_onboarding.md  dashboard.md  db_schema.md  deployment.md  escalation_ladder.md  grammar_efficacy.md  harvest-backends.md  judge-calibration.md  judge.md  judge_fp_taxonomy.md  mcp.md  multimodal.md  retrieval.md  scheduling.md  schemas.md  self-growing-repertoire.md  sources.md  taxonomy.md
examples/: company_quickstart.py  sample_report.md  sdk_quickstart.py
frontend/: .env.example  .vercelignore  ARCHITECTURE.md  package-lock.json  package.json  vitest.config.ts
rogue-scan/: breach-card.html
scripts/: add_integration.py  analyze_hf_datasets.py  analyze_sweep.py  audio_viability_probe.py  audit_blind_supplement.sh  backlog_slope.py  benchmark_run.py  build_analytics.py  build_technique_profiles.py  cache_images_to_db.py  candidate_quota_ab.py  confirm_multimodal_gap.py  context_separation.py  dump_schema.py  embed_techniques.py  eval_jbb_judge.py  eval_wildguard.py  export_huggingface_dataset.py  export_paper_data.py  fetch_media_assets.py  grammar_combinations.py  grammar_efficacy_ab.py  grammar_labels.py  grammar_node_lift.py  grammar_study.py  grammar_validation.py  growth_scheduler.py  growth_sweep.sh  harvest_once.py  harvest_oversight_extend.py  harvest_oversight_sources.py  harvest_skill_pool_fetch.py  harvest_skill_pool_serp.py  harvest_url.py  install_mcp.py  make_overleaf_zips.sh  make_sample_report.py  make_supplements.sh  multimodal_escalation_demo.py  multimodal_gate_check.py  (+29 more)
sdk/: .gitignore  CONTRACT.md  DESIGN.md  README.md  pyproject.toml
sdk/examples/: README.md  async_scan.py  providers.py  quickstart.py
sdk/src/rogue/: __init__.py  _version.py
sdk/src/rogue/adapters/: __init__.py  anthropic.py  base.py  custom.py  openai.py  vertex.py
sdk/src/rogue/cli/: __init__.py  main.py
sdk/src/rogue/client/: __init__.py  auth.py  deployments.py  reports.py  rogue.py  scans.py
sdk/src/rogue/exceptions/: __init__.py
sdk/src/rogue/models/: __init__.py  common.py  deployment.py  finding.py  report.py  scan.py
sdk/src/rogue/transport/: __init__.py  base.py  http.py  mock.py
sdk/src/rogue/utils/: __init__.py  config.py  telemetry.py  validation.py
sdk/tests/: conftest.py  test_adapters.py  test_cli.py  test_client.py  test_config.py  test_exceptions.py  test_models.py  test_report_export.py  test_telemetry.py  test_transport.py  test_validation.py
tests/: conftest.py  test_acquisition_gate.py  test_adapter_swap.py  test_adapter_tool_contract.py  test_adapters_anthropic.py  test_adapters_gemini.py  test_adapters_openai_compat.py  test_add_integration.py  test_agent_backend_foundation.py  test_agent_exec_eval.py  test_agent_exec_knobs.py  test_agent_exec_tier.py  test_agent_harness.py  test_agent_memory_exfil.py  test_agent_multiparty.py  test_agent_scan_stage.py  test_agent_scenarios.py  test_agent_schemas.py  test_anthropic_adapter_tools.py  test_api_image_route.py  test_arms_strategies.py  test_assurance_report.py  test_attestation_gate.py  test_bandit.py  test_bandit_attribution.py  test_bandit_serp_phase.py  test_bootstrap.py  test_calibration_adapters.py  test_calibration_sampling.py  test_cascade_judge.py  test_cli_scan_card.py  test_cli_setup.py  test_cli_try.py  test_coj.py  test_compliance_signal.py  test_config_size_prior.py  test_conformance.py  test_core_attachment.py  test_core_capabilities.py  test_core_content_blocks.py  (+205 more)
website_architecture/: 00_overview_and_trailer_walkthrough.md  01_sitemap_and_navigation.md  02_public_surfaces.md  03_app_and_scan_journey.md  04_technical_architecture.md  05_capabilities_landing_and_intelligence.md  06_capabilities_threat_intel.md  07_capabilities_product_scanning_reports.md  08_brand_kit.md  09_filming_and_capture_notes.md  10_logo_and_og_creative_brief.md  README.md
(+1078 files in other folders)
