[project]
name = "rogue"
version = "0.1.0"
description = "Open-web LLM threat intelligence agent (Bright Data hackathon submission)"
requires-python = ">=3.11,<3.12"
authors = [{name = "Soren Obounou Nguia"}]
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.7,<3",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "ulid-py>=1.1",
    "python-dotenv>=1.0",
    "openai>=1.40",
    "anthropic>=0.34",
    "tenacity>=8.5",
    "pypdf>=4.3",
    "mcp>=1.0",
    "playwright>=1.60.0",
    "pillow>=10.4",
    "datasets>=4.8.5",
    "reportlab>=4.5.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
rogue = "rogue.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "matplotlib>=3.10.9",
]
