[project]
name = "rogue"
version = "1.0.0"
description = "Open-web LLM threat intelligence agent (Bright Data hackathon submission)"
requires-python = ">=3.11"
authors = [{name = "Soren Obounou Nguia"}]
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.7,<3",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "ulid-py>=1.1",
    "python-dotenv>=1.0",
    "openai>=1.40",
    "anthropic>=0.34",
    "tenacity>=8.5",
    "pypdf>=4.3",
    "mcp>=1.0",
    "playwright>=1.60.0",
    "pillow>=10.4",
    "datasets>=4.8.5",
    "reportlab>=4.5.1",
    # Production-readiness (both degrade to no-ops when their env vars are unset):
    "sentry-sdk[fastapi]>=2.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
rogue = "rogue.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

# Ruff lint uses its default set (E4/E7/E9 + F) — verified clean across src/.
# Tightening to the fuller E/I/UP/B set surfaces ~1,200 mostly-mechanical findings
# (Optional[X]→X|None, import sorting, bugbear); that's a dedicated cleanup pass
# tracked for v2, deliberately NOT bundled here so the new CI gate stays green.

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
markers = [
    "live: hits live paid APIs (Bright Data / LLMs); skipped unless ROGUE_LIVE_TESTS=1",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.9",
]
