[project]
name = "rogue-live-redteam"
version = "1.5.0"
description = "Continuous open-web LLM red-team: harvests live jailbreaks from 15+ open-web sources, reproduces them against your model x system-prompt x tools, and serves results over its own MCP server."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Soren Obounou Nguia"}]
license = {text = "MIT"}
keywords = ["llm", "red-team", "security", "jailbreak", "prompt-injection", "ai-safety", "mcp", "bright-data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.7,<3",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "ulid-py>=1.1",
    "python-dotenv>=1.0",
    "openai>=1.40",
    "anthropic>=0.34",
    "tenacity>=8.5",
    "pypdf>=4.3",
    "mcp>=1.0",
    "playwright>=1.60.0",
    "pillow>=10.4",
    # Shareable breach card: python-qrcode StyledPilImage renders the clean styled QR (rounded
    # modules + eyes + center logomark) that the card embeds. Pulls Pillow (already a dep).
    "qrcode[pil]>=8.2",
    "datasets>=4.8.5",
    "reportlab>=4.5.1",
    # Production-readiness (both degrade to no-ops when their env vars are unset):
    "sentry-sdk[fastapi]>=2.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0", "ruff>=0.5", "mypy>=1.10"]
# Optional harvest-fetcher backends (keyless/free). Bright Data + the httpx-based backends
# (direct, ddg, hf_api, firecrawl) need no extra; these pull heavier deps and stay opt-in.
# crawl4ai also needs a chromium binary: `crawl4ai-setup` (or `playwright install chromium`).
crawl4ai = ["crawl4ai>=0.4.0"]
# PDF→markdown harvest backend (local, free, no rate limit). Preferred for PDF URLs when installed;
# Firecrawl is the keyless fallback otherwise. Pulls pymupdf (+ layout/onnxruntime), hence opt-in.
pdf = ["pymupdf4llm>=1.27.2.3"]

[project.scripts]
rogue = "rogue.cli:main"

[project.urls]
Homepage = "https://rogue-eosin.vercel.app"
Repository = "https://github.com/nguiaSoren/ROGUE"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The distribution name (rogue-live-redteam) differs from the import package (rogue), so hatchling
# can't auto-detect it from the project name — point it at the package explicitly. Bundle the runtime
# data files (attack packs, judge/extraction rubrics, benchmark datasets) and drop macOS .DS_Store junk.
[tool.hatch.build.targets.wheel]
packages = ["src/rogue"]

# slot_defaults.json is a committed static fixture canonically at tests/fixtures/ (the wire-format
# source of truth), but the reproduce layer loads it at import time — so it MUST ship inside the wheel
# (tests/ is not packaged). force-include maps the single canonical file into the package as
# rogue/data/slot_defaults.json; the loader (instantiator.py) reads that path when installed and falls
# back to tests/fixtures/ in-repo. No committed duplicate → no drift.
[tool.hatch.build.targets.wheel.force-include]
"tests/fixtures/slot_defaults.json" = "rogue/data/slot_defaults.json"

# Keep the sdist tiny + clean — the default sweeps the whole repo (assets/videos, data/, tests/),
# which bloats the upload to ~66MB and leaks non-package content. Ship only the package + metadata.
[tool.hatch.build.targets.sdist]
only-include = ["src/rogue", "README.md", "LICENSE"]

[tool.hatch.build]
exclude = ["**/.DS_Store", "**/__pycache__"]

[tool.ruff]
line-length = 100
target-version = "py311"

# Ruff lint uses its default set (E4/E7/E9 + F) — verified clean across src/.
# Tightening to the fuller E/I/UP/B set surfaces ~1,200 mostly-mechanical findings
# (Optional[X]→X|None, import sorting, bugbear); that's a dedicated cleanup pass
# tracked for v2, deliberately NOT bundled here so the new CI gate stays green.

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
markers = [
    "live: hits live paid APIs (Bright Data / LLMs); skipped unless ROGUE_LIVE_TESTS=1",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.9",
    # QR decode verification: the card tests render a card and decode its QR off the PNG with
    # cv2.QRCodeDetector to PROVE every generated code scans to the right URL (headless = no system
    # deps). Tests importorskip("cv2"), so this just needs to be present in the dev env / CI.
    "opencv-python-headless>=4.10",
]
